<resources>
    <string name="app_name">Desafio Android Mobills</string>
    <string name="movimentation">Movimentações</string>
    <string name="acessibility_cadastrar_novo">cadastrar novo</string>
    <string name="error_load_transactions">Não foi possível buscar as transações nesse momento, por favor, tente mais tarde</string>
    <string name="error_save_transaction">Não foi possível salvar sua transação, por favor, tente novamente mais tarde</string>
    <string name="error_update_item">Não foi possível atualizar este item, por favor, tente novamente mais tarde</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seja_bem_vindo">Seja bem vindo</string>
    <string name="text_title_login">LOGIN</string>
    <string name="text_email">Digite seu email:</string>
    <string name="text_password">Digite sua senha:</string>
    <string name="text_forgot_password">Esqueci a senha</string>
    <string name="message_error">Mensagem de erro</string>
    <string name="text_button_enter">Entrar</string>
    <string name="text_description_image">Imagem de biometria para logar no aplicativo</string>
    <string name="text_register_new_user">Ainda não tem uma conta? \nRegistre-se aqui. </string>
    <string name="message_data_empty">Todos os campos são obrigatórios</string>
    <string name="message_error_data_isempty">Por favor , digite seus dados para validação.</string>
    <string name="message_error_email">Por favor, digite um email válido.</string>
    <string name="message_password_lengt">Sua senha deve conter mais de cinco digitos.</string>
    <string name="message_error_authentication">Error ao logar usuario.</string>
    <string name="message_title_screen_registration">Cadastro</string>
    <string name="name_of_user">Nome do usuário</string>
    <string name="text_name_et">Insira seu nome de usuário:</string>
    <string name="title_email">Email</string>
    <string name="text_email_register">Insira seu email:</string>
    <string name="title_password">Senha</string>
    <string name="text_password_register">Insira sua senha:</string>
    <string name="title_confirmation_password">Confirmar senha</string>
    <string name="text_confirmation_password">Confirme sua senha:</string>
    <string name="text_btn_register">SALVAR</string>
    <string name="message_register_name">Seu nome deve conter mais de três caracteres.</string>
    <string name="message_name_email_equals">Por favor, digite dados válidos.</string>
    <string name="message_daata_register_empty">Por favor , digite dados validos para o registro.</string>
    <string name="message_error_resgister">Erro ao se registrar , por favor tente novamente mais tarde.</string>
    <string name="message_password_not_equals">As senhas nao correspondem.</string>
    <string name="_19">19</string>
    <string name="text_description">Descrição</string>
    <string name="text_value">R$ 22,93</string>
    <string name="text_delete">DELETAR</string>
    <string name="text_edit">EDITAR</string>
    <string name="messag_ok">Ok</string>
    <string name="message_delete">\"Tem certeza que desaja deletar um item da lista?\"</string>
    <string name="message_error_list_empty">Voce ainda nao cadastrou nenhum produto.</string>
    <string name="message_item_delet">Item deletado com sucesso.</string>
    <string name="text_transation">Cadastro de transações</string>
    <string name="value">Valor da transação</string>
    <string name="example_value">Ex: R$ 2,22</string>
    <string name="text_description_spent">Descrição de gasto</string>
    <string name="ex_supermarket">Ex: supermercado</string>
    <string name="tv_date_transaction">Data da transação</string>
    <string name="ex_date">Ex: 22/01/2021</string>
    <string name="text_lc">Lucro</string>
    <string name="spent">Despesa</string>
    <string name="message_new_regsister_ok">Novo registro realizado com sucesso.</string>
    <string name="text_lucro">Lucro</string>
    <string name="gasto">Gasto</string>
    <string name="text_edit_transaction">Editar transação</string>
    <string name="message_edit_transaction_ok">Transação editada com sucesso</string>
    <string name="message_updated_regsister_ok">Item atualizado com sucesso</string>
</resources>