<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:id="@+id/scrow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.UserRegistrationFragment">

            <View
                android:id="@+id/view_toolbar"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:background="@drawable/shape_view_toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/text_transation"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cd_user_resgistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_transaction">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/tv_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/value"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:hint="@string/example_value"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="12dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_value" />

                    <TextView
                        android:id="@+id/tv_description_registration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/text_description_spent"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_value" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:hint="@string/ex_supermarket"
                        android:inputType="text"
                        android:lines="4"
                        android:maxLines="4"
                        android:padding="12dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_description_registration" />


                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/tv_date_transaction"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:inputType="number"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_description" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:drawableStart="@drawable/ic_date"
                        android:hint="@string/ex_date"
                        android:drawablePadding="10dp"
                        android:inputType="date"
                        android:padding="12dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_date" />


                    <TextView
                        android:id="@+id/tv_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_date" />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_change_paid"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:checked="false"
                        android:theme="@style/ColorSwitchChecked"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_date" />

                    <TextView
                        android:id="@+id/switch_profit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="75dp"
                        android:layout_marginVertical="35sp"
                        android:text="@string/text_lucro"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_date" />

                    <TextView
                        android:id="@+id/switch_spent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="60dp"
                        android:layout_marginVertical="35sp"
                        android:text="@string/spent"
                        android:textSize="16sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_date" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="30dp"
                        android:background="@drawable/button_shape"
                        android:text="@string/text_btn_register"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/switch_change_paid"
                        app:layout_constraintVertical_bias="1" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>