<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/tb_toolbar_login"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:background="@drawable/shape_view_toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/label_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/seja_bem_vindo"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/myCradView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_welcome">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/text_title_login"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/comfortaa_light"
                        android:hint="@string/text_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_login" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        app:layout_constraintLeft_toLeftOf="@id/et_email"
                        app:layout_constraintRight_toRightOf="@+id/et_email"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/comfortaa_light"
                        android:hint="@string/text_password"
                        android:inputType="numberPassword"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_email" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <ProgressBar
                android:id="@+id/pb_load"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:indeterminateDrawable="@drawable/shape_progress_bar"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message_error"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_message_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/myCradView"
                tools:hint="@string/message_error"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:text="@string/text_button_enter"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/myCradView"
                app:layout_constraintRight_toRightOf="@id/myCradView"
                app:layout_constraintTop_toBottomOf="@id/tv_message_error" />


            <TextView
                android:id="@+id/tv_new_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/text_register_new_user"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_enter" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>