<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:id="@+id/scrow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.UserRegistrationFragment">

            <View
                android:id="@+id/view_toolbar"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:background="@drawable/shape_view_toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/message_title_screen_registration"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cd_user_resgistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/title_email"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="10dp"
                        android:hint="@string/text_email_register"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="12dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_email" />

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/title_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_email" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:drawableStart="@drawable/ic_baseline_vpn_key"
                        android:drawablePadding="10dp"
                        android:hint="@string/text_password_register"
                        android:inputType="numberPassword"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="12dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_password" />


                    <TextView
                        android:id="@+id/tv_text_confirmation_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/title_confirmation_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_password" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_confirmation_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:drawableStart="@drawable/ic_baseline_vpn_key"
                        android:drawablePadding="10dp"
                        android:hint="@string/text_confirmation_password"
                        android:inputType="numberPassword"
                        android:padding="12dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_text_confirmation_password"
                        tools:layout_editor_absoluteX="15dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="30dp"
                        android:background="@drawable/button_shape"
                        android:text="@string/text_btn_register"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_confirmation_password"
                        app:layout_constraintVertical_bias="1" />

                    <ProgressBar
                        android:id="@+id/pb_load_register"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="30dp"
                        android:indeterminateDrawable="@drawable/shape_progress_bar"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_confirmation_password"
                        app:layout_constraintVertical_bias="1"
                        tools:visibility="visible" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>